# docker-all-the-way

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  activate.ps1  aliases.ps1  aliases.sh  docker-compose.dev.yaml  docker-compose.run-local.yaml  docker-compose.yaml  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml
db_migrations/: 01_initial.sql  02_create_person_table.sql  run_migrations.sh
nginx/certs/: README.md
nginx/conf.d/: default.conf
nginx/templates/: default.conf.template  unsafe.conf.template
src/app/: main.py  utils.py
tests/app/: test_db.py  test_main.py  test_utils.py
