[tool.poetry]
name = "docker-all-the-way"
version = "0.1.0"
description = "Docker All The Way"
authors = ["Johan Vergeer <johanvergeer@gmail.com>"]
license = "MIT"
packages = [
    { include = "app", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
tornado = "6.3.3"
psycopg2-binary = "2.9.3"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
mypy = "^0.942"
types-psycopg2 = "^2.9.10"

[tool.poetry.scripts]
serve_app = "app.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

no_implicit_optional = true
strict_optional = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

strict_equality = true

show_error_context = true
show_error_codes = true
